--- a/examples/tikzdependency/file2.tex
+++ b/examples/tikzdependency/file2.tex
@@ -7,65 +7,65 @@
 \PreviewEnvironment{dependency}
 \begin{document}
 % ---------------- GRAPH 1
-\begin{dependency}[theme = simple]
+\begin{dependency}[segmented edge, text only label, label style={scale=1.3, above}]
 \begin{deptext}[column sep=1em]
 The \& task \& of \& natural \& language \& generation \& be \& to \& convert \& information \& from \& computer \& database \& into \& readable \& human \& language \& . \\
 AT \& NN1 \& IO \& JJ \& NN1 \& NN1 \& VBZ \& TO \& VV0 \& NN \& II \& NN1 \& NN2 \& II \& JJ \& JJ \& NN1 \& . \\
 \end{deptext}
-\depedge{7}{2}{ncsubj} % (ncsubj be_VBZ task_NN1)
-\depedge{7}{9}{xcomp} % (xcomp be_VBZ convert_VV0)
-\depedge{9}{11}{iobj} % (iobj convert_VV0 from_II)
-\depedge{9}{10}{dobj} % (dobj convert_VV0 information_NN)
-\depedge{11}{13}{dobj} % (dobj from_II database_NN2)
-\depedge{13}{14}{ncmod} % (ncmod database_NN2 into_II)
-\depedge{14}{17}{dobj} % (dobj into_II language_NN1)
-\depedge{17}{15}{ncmod} % (ncmod language_NN1 readable_JJ)
-\depedge{17}{16}{ncmod} % (ncmod language_NN1 human_JJ)
-\depedge{13}{12}{ncmod} % (ncmod database_NN2 computer_NN1)
-\depedge{2}{1}{det} % (det task_NN1 The_AT)
-\depedge{2}{3}{iobj} % (iobj task_NN1 of_IO)
-\depedge{3}{6}{dobj} % (dobj of_IO generation_NN1)
-\depedge{6}{4}{ncmod} % (ncmod generation_NN1 natural_JJ)
-\depedge{6}{5}{ncmod} % (ncmod generation_NN1 language_NN1)
+\depedge[edge unit distance=2.4ex]{7}{2}{ncsubj} % (ncsubj be_VBZ task_NN1)
+\depedge[edge unit distance=1.5ex]{7}{9}{xcomp} % (xcomp be_VBZ convert_VV0)
+\depedge[edge unit distance=3.0ex]{9}{11}{iobj} % (iobj convert_VV0 from_II)
+\depedge[edge unit distance=3.0ex]{9}{10}{dobj} % (dobj convert_VV0 information_NN)
+\depedge[edge unit distance=3.0ex]{11}{13}{dobj} % (dobj from_II database_NN2)
+\depedge[edge unit distance=3.0ex]{13}{14}{ncmod} % (ncmod database_NN2 into_II)
+\depedge[edge unit distance=3.0ex]{14}{17}{dobj} % (dobj into_II language_NN1)
+\depedge[edge unit distance=3.0ex]{17}{15}{ncmod} % (ncmod language_NN1 readable_JJ)
+\depedge[edge unit distance=3.0ex]{17}{16}{ncmod} % (ncmod language_NN1 human_JJ)
+\depedge[edge unit distance=3.0ex]{13}{12}{ncmod} % (ncmod database_NN2 computer_NN1)
+\depedge[edge unit distance=3.0ex]{2}{1}{det} % (det task_NN1 The_AT)
+\depedge[edge unit distance=3.0ex]{2}{3}{iobj} % (iobj task_NN1 of_IO)
+\depedge[edge unit distance=3.0ex]{3}{6}{dobj} % (dobj of_IO generation_NN1)
+\depedge[edge unit distance=3.0ex]{6}{4}{ncmod} % (ncmod generation_NN1 natural_JJ)
+\depedge[edge unit distance=3.0ex]{6}{5}{ncmod} % (ncmod generation_NN1 language_NN1)
 \end{dependency}
 
 % ---------------- GRAPH 2
-\begin{dependency}[theme = simple]
+\begin{dependency}[segmented edge, text only label, label style={scale=1.3, above}]
 \begin{deptext}[column sep=1em]
 Parsing \& aim \& to \& determine \& the \& parse \& tree \& ( \& grammatical \& analysis \& ) \& of \& a \& give \& sentence \& . \& {[}{[}null{]}{]} \\
 NN1 \& VVZ \& TO \& VV0 \& AT \& NN1 \& NN1 \& ( \& JJ \& NN1 \& ) \& IO \& AT1 \& VVN \& NN1 \& . \& {[}{[}nullpos{]}{]} \\
 \end{deptext}
-\depedge{2}{1}{ncsubj} % (ncsubj aim_VVZ Parsing_NN1)
-\depedge{2}{4}{xcomp} % (xcomp aim_VVZ determine_VV0)
-\depedge{4}{12}{iobj} % (iobj determine_VV0 of_IO)
-\depedge{4}{7}{dobj} % (dobj determine_VV0 tree_NN1)
-\depedge{12}{15}{dobj} % (dobj of_IO sentence_NN1)
-\depedge{15}{13}{det} % (det sentence_NN1 a_AT1)
-\depedge{14}{17}{passive} % (passive give_VVN [[null]]_[[nullpos]])
-\depedge{14}{15}{ncsubj} % (ncsubj give_VVN sentence_NN1)
-\depedge{15}{14}{ncmod} % (ncmod sentence_NN1 give_VVN)
-\depedge{7}{10}{ta} % (ta tree_NN1 analysis_NN1)
-\depedge{10}{9}{ncmod} % (ncmod analysis_NN1 grammatical_JJ)
-\depedge{7}{5}{det} % (det tree_NN1 the_AT)
-\depedge{7}{6}{ncmod} % (ncmod tree_NN1 parse_NN1)
+\depedge[edge unit distance=3.0ex]{2}{1}{ncsubj} % (ncsubj aim_VVZ Parsing_NN1)
+\depedge[edge unit distance=1.5ex]{2}{4}{xcomp} % (xcomp aim_VVZ determine_VV0)
+\depedge[edge unit distance=1.5ex]{4}{12}{iobj} % (iobj determine_VV0 of_IO)
+\depedge[edge unit distance=3.0ex]{4}{7}{dobj} % (dobj determine_VV0 tree_NN1)
+\depedge[edge unit distance=4.0ex]{12}{15}{dobj} % (dobj of_IO sentence_NN1)
+\depedge[edge unit distance=4.5ex]{15}{13}{det} % (det sentence_NN1 a_AT1)
+\depedge[edge unit distance=5.0ex]{14}{17}{passive} % (passive give_VVN [[null]]_[[nullpos]])
+\depedge[edge unit distance=3.0ex]{14}{15}{ncsubj} % (ncsubj give_VVN sentence_NN1)
+\depedge[edge unit distance=6.0ex]{15}{14}{ncmod} % (ncmod sentence_NN1 give_VVN)
+\depedge[edge unit distance=2.0ex]{7}{10}{ta} % (ta tree_NN1 analysis_NN1)
+\depedge[edge unit distance=3.0ex]{10}{9}{ncmod} % (ncmod analysis_NN1 grammatical_JJ)
+\depedge[edge unit distance=3.0ex]{7}{5}{det} % (det tree_NN1 the_AT)
+\depedge[edge unit distance=3.0ex]{7}{6}{ncmod} % (ncmod tree_NN1 parse_NN1)
 \end{dependency}
 
 % ---------------- GRAPH 3
-\begin{dependency}[theme = simple]
+\begin{dependency}[segmented edge, text only label, label style={scale=1.3, above}]
 \begin{deptext}[column sep=1em]
 Information \& retrieval \& be \& concern \& with \& store \& , \& search \& and \& retrieve \& information \& . \& {[}{[}null{]}{]} \\
 NN \& NN1 \& VBZ \& VVN \& IW \& VVG \& , \& VVG \& CC \& VVG \& NN \& . \& {[}{[}nullpos{]}{]} \\
 \end{deptext}
-\depedge{4}{9}{xmod} % (xmod concern_VVN and_CC)
-\depedge{9}{8}{conj} % (conj and_CC search_VVG)
-\depedge{9}{10}{conj} % (conj and_CC retrieve_VVG)
-\depedge{10}{11}{dobj} % (dobj retrieve_VVG information_NN)
-\depedge{4}{2}{ncsubj} % (ncsubj concern_VVN retrieval_NN1)
-\depedge{4}{3}{aux} % (aux concern_VVN be_VBZ)
-\depedge{4}{13}{passive} % (passive concern_VVN [[null]]_[[nullpos]])
-\depedge{4}{5}{xcomp} % (xcomp concern_VVN with_IW)
-\depedge{5}{6}{xcomp} % (xcomp with_IW store_VVG)
-\depedge{2}{1}{ncmod} % (ncmod retrieval_NN1 Information_NN)
+\depedge[edge unit distance=1.2ex]{4}{9}{xmod} % (xmod concern_VVN and_CC)
+\depedge[edge unit distance=3.0ex]{9}{8}{conj} % (conj and_CC search_VVG)
+\depedge[edge unit distance=3.0ex]{9}{10}{conj} % (conj and_CC retrieve_VVG)
+\depedge[edge unit distance=3.0ex]{10}{11}{dobj} % (dobj retrieve_VVG information_NN)
+\depedge[edge unit distance=3.0ex]{4}{2}{ncsubj} % (ncsubj concern_VVN retrieval_NN1)
+\depedge[edge unit distance=3.0ex]{4}{3}{aux} % (aux concern_VVN be_VBZ)
+\depedge[edge unit distance=1.0ex]{4}{13}{passive} % (passive concern_VVN [[null]]_[[nullpos]])
+\depedge[edge unit distance=3.0ex]{4}{5}{xcomp} % (xcomp concern_VVN with_IW)
+\depedge[edge unit distance=3.0ex]{5}{6}{xcomp} % (xcomp with_IW store_VVG)
+\depedge[edge unit distance=3.0ex]{2}{1}{ncmod} % (ncmod retrieval_NN1 Information_NN)
 \end{dependency}
 
 \end{document}
